adds some dom stuff

--- a/08-automation/src/index.html
+++ b/08-automation/src/index.html
@@ -7,8 +7,21 @@
 </head>
 
 <body>
+	<h1>BBC TypeScript</h1>
 
+	<div id="content">
+		<!-- This is a comment -->
 
+	</div>
+
+	<h1>Cool Title</h1>
+	<button id="shops">Shops</button>
+	<button id="drinks">Drinks</button>
+	<div id="app">
+		<!-- This is a comment -->
+	</div>
+	<div id="results"></div>
+	<input id="test">
 </body>
 
 </html>
